# chat-with-TW-techradar

./: .env.gemini.template  .env.ollama.template  .env.openai.template  .gitignore  .talismanrc  README.md  logger.py  main.py  pyproject.toml  sample_env
chroma_db/: chroma.sqlite3
config/: __init__.py  app_config.py  constants.py  llm_config.py  llm_config.yaml
examples/: llm_usage_example.py
src/data_ingestion/: doc_processor_with_metadata.py  document_loader.py  document_processor.py
src/llm/: model_manager.py
src/scripts/: db_management.py
src/utils/: logger.py
src/vector_store/: get_vector_db.py  vector_store.py
tests/data_ingestion/: __init__.py  doc_processor_with_metadata.py  test_data_ingestion.py  test_doc_processor_with_metadata.py
tests/llm/: test_model_manager.py
